# mactype_tauri

./: .gitignore  CLAUDE.md  CONTEXT.md  DESIGN.md  HOWTOBUILD.md  README.md  SECURITY.md  afxres.h  common.cpp  common.h  directwrite.cpp  dll.cpp  dll.h  expfunc.cpp  ft.cpp  ft.h  fteng.cpp  fteng.h  gdidll.rc  gdipp.vcxproj  gdipp.vcxproj.filters  hook.cpp  hooklist.h  override.cpp  override.h  settings.cpp  settings.h
assets/: README.md
control-center/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
control-center/src-tauri/capabilities/: default.json
control-center/src-tauri/src/: app.rs  bounded_io.rs  desktop_shell.rs  diagnostics.rs  execution.rs  fonts.rs  generated_settings.rs  legacy_service.rs  lib.rs  main.rs  preview.rs  profile.rs  service_contract.rs  single_instance.rs
control-center/src-tauri/src/diagnostics/: operation_log.rs
control-center/src-tauri/src/execution/: autostart.rs  process_candidates.rs  runtime.rs  session.rs  storage.rs
control-center/src-tauri/src/machine_integration/: appinit.rs  legacy_tray.rs  live_teardown.rs  mod.rs  model.rs  orchestrator.rs  publish.rs  startup_coordination.rs  status.rs  system_backend.rs  tests.rs
control-center/src-tauri/src/machine_integration/legacy_mactray/: mod.rs  model.rs  ownership.rs  restore_contract.rs  startup_coordinator.rs  tests.rs  tray_exit.rs  tray_process.rs  tray_startup.rs  windows.rs
control-center/src-tauri/src/machine_integration/legacy_migration/: mod.rs  model.rs  receipt.rs  startup_receipt.rs  storage.rs  tests.rs  transaction.rs
control-center/src-tauri/src/machine_integration/open_service/: broker.rs  broker_result.rs  file_guard.rs  identity.rs  legacy_status.rs  migration.rs  mod.rs  platform.rs  profile_transfer.rs  request.rs  runtime.rs  startup_lifecycle.rs  tests.rs  windows.rs
control-center/src-tauri/src/preview/: commands.rs  helper.rs  installation.rs  protocol.rs  render.rs  state.rs
control-center/src-tauri/src/profile/: codec.rs  commands.rs  document.rs  identity.rs  legacy.rs  mutation.rs  state.rs  storage.rs  tests.rs  upstream_corpus_tests.rs
control-center/src-tauri/src/profile/mutation/: validated_input.rs
doc/: HOWTOBUILD.md
preview-helper/: CMakeLists.txt  main.cpp  preview_runtime.cpp  protocol.cpp
preview-helper/include/: generated_settings.h  legacy_control_center.h  preview_runtime.h  protocol.h
preview-helper/tests/: fake_easyhook.cpp  fake_mactype.cpp  fake_mactype.def  manual_launch_target.cpp  protocol_tests.cpp  runtime_tests.cpp
service-injector/: CMakeLists.txt  README.md
service-injector/include/: broker_request.h  fixed_module.h  injector.h  module_inventory.h  remote_injection.h  remote_injection_verdict.h  result.h  safety_policy.h  unique_handle.h
service-injector/src/: broker_request.cpp  fixed_module.cpp  injector.cpp  main.cpp  module_inventory.cpp  remote_injection.cpp  remote_injection_verdict.cpp  result.cpp  safety_policy.cpp
service-injector/tests/: contract_tests.cpp  inherited_handle_launcher.cpp  integration_test.ps1  marker_dll.cpp  marker_target.cpp
service-runtime/: Cargo.toml  README.md
service-runtime/contract/: Cargo.toml
service-runtime/contract/src/: appinit.rs  broker.rs  health.rs  lib.rs  manifest.rs  migration_pin.rs  paths.rs  profile.rs  runtime_activation.rs
service-runtime/contract/tests/: appinit_contract.rs  broker_contract.rs  health_contract.rs  machine_paths_contract.rs  manifest_contract.rs  migration_pin_contract.rs  profile_generation_contract.rs  runtime_activation_contract.rs
service-runtime/host/: Cargo.toml  build.rs
service-runtime/host/src/: control.rs  file_health.rs  helper_broker.rs  injection_orchestrator.rs  known_folders.rs  lib.rs  main.rs  named_pipe.rs  observer.rs  orchestration_runtime.rs  profile_runtime.rs  protected_path.rs  runtime.rs  runtime_assets.rs  scm.rs  service_version.rs  session_event_queue.rs  startup_safety.rs  status.rs  target_validation.rs  windows_helper_launcher.rs  windows_process.rs  windows_runtime.rs  windows_startup_safety.rs  windows_wmi.rs
service-runtime/host/src/injection_orchestrator/: model.rs
service-runtime/host/src/runtime/: lifecycle.rs
service-runtime/host/src/scm/: crash_adapter.rs  tests.rs  win32_adapter.rs
service-runtime/host/src/windows_helper_launcher/: command_line.rs  native.rs  tests.rs
service-runtime/host/src/windows_startup_safety/: appinit.rs  service_registry.rs
service-runtime/host/tests/: control_contract.rs  helper_broker.rs  named_pipe_security.rs  orchestration_driver.rs  process_orchestration.rs  protected_profile.rs  protected_runtime_assets.rs  service_lifecycle.rs  startup_conflicts.rs  target_validation.rs  windows_process_inspector.rs  windows_wmi_observer.rs
service-runtime/setup/: Cargo.toml
service-runtime/setup/src/: install_bootstrap.rs  lib.rs  main.rs  profile_bridge.rs  profile_store.rs  runtime_installer.rs  storage.rs
service-runtime/setup/src/profile_bridge/: cleanup.rs  runtime.rs
service-runtime/setup/src/profile_store/: generation.rs  journal.rs  pointer.rs
service-runtime/setup/src/runtime_installer/: deferred_delete.rs  deployment.rs  journal.rs  retention.rs  uninstall.rs
service-runtime/setup/src/windows/: acl.rs  appinit.rs  broker.rs  installer.rs  known_folders.rs  legacy_tray.rs  machine_lock.rs  mod.rs  runtime_recovery.rs  scm.rs
service-runtime/setup/tests/: install_bootstrap.rs  profile_store.rs  runtime_installer_bounds.rs  runtime_installer_install.rs  runtime_installer_repair.rs  runtime_installer_retention.rs  runtime_installer_rollback.rs  runtime_installer_uninstall.rs  runtime_installer_upgrade.rs  service_ownership.rs
tools/service-probe/: CMakeLists.txt  child_process.cpp  child_process.h  probe_common.cpp  probe_common.h  probe_io.cpp  probe_main.cpp  process_observation.cpp  process_observation.h  render_probe.cpp  render_probe.h  snapshot_json.cpp  snapshot_json.h  spawn_tree.cpp  win32_support.cpp  win32_support.h
tools/service-probe/tests/: Test-ProbeContract.ps1
tools/service-probe/tests/fixtures/: timeout_tree.cpp
(+241 files in other folders)
