[package]
name = "mactype-control-center"
version = "0.1.0"
description = "Open control center for MacType"
authors = ["MacType contributors"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "mactype_control_center_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
